@@ -1,5 +1,14 @@
 2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
 
+	* GNUmakefile.in (distclean): Remove GNUstep.conf.
+	Do not remove GNUsteprc.
+	(generated-files): Added GNUstep.conf.
+	(GNUstep.conf): New rule to regenerate it.
+	* GNUstep.conf.in: Added all the new filesystem options with
+	explanations on what they mean.
+	
+2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>
+
 	Warning: the software will be instable for some time.  Don't
 	upgrade from trunk if you need stability.
 	* configure.ac: Set default values for GNUSTEP_SYSTEM_TOOLS,
